[gd_scene load_steps=2 format=3 uid="uid://y08kr1x16b7a"]

[ext_resource type="Script" path="res://scenes/ui/CharacterCreation.gd" id="1_script"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Create Your Character"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Your Name:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Adventurer"
alignment = 1

[node name="ArchetypeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Your Archetype:"
horizontal_alignment = 1

[node name="ArchetypeSelector" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="CenterContainer/VBoxContainer/ArchetypeSelector"]
layout_mode = 2
text = "<"

[node name="ArchetypeLabel" type="Label" parent="CenterContainer/VBoxContainer/ArchetypeSelector"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Warrior"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="CenterContainer/VBoxContainer/ArchetypeSelector"]
layout_mode = 2
text = ">"

[node name="VowHeaderLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Your Vow:"
horizontal_alignment = 1

[node name="VowSelector" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VowPrevButton" type="Button" parent="CenterContainer/VBoxContainer/VowSelector"]
layout_mode = 2
text = "<"

[node name="VowLabel" type="Label" parent="CenterContainer/VBoxContainer/VowSelector"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "I finish what I start"
horizontal_alignment = 1

[node name="VowNextButton" type="Button" parent="CenterContainer/VBoxContainer/VowSelector"]
layout_mode = 2
text = ">"

[node name="PresuppositionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "As you choose, you become."
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Begin Journey"
